# ProJectDocsHub

./: .dockerignore  .env.example  .gitignore  Dockerfile  LICENSE  README.md  docker-compose.dev.yml  docker-compose.yml  pyproject.toml  run.sh
app/: config.py  database.py  main.py  models.py  schemas.py  storage.py
app/routers/: documents.py  projects.py  sections.py
app/static/css/: style.css
app/static/js/: app.js
app/templates/: base.html  index.html  project.html
