[project]
name = "ProJectDocsHub"
version = "0.1.0"
description = "Веб-приложение для сбора и управления документами и файлами проектов"
authors = [{name = "Shkola Olga"}]
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.111,<0.112",
    "uvicorn[standard]>=0.29,<0.30",
    "sqlalchemy>=2.0,<2.1",
    "aiosqlite>=0.20,<0.21",
    "python-multipart>=0.0.9,<0.1",
    "jinja2>=3.1,<3.2",
    "aiofiles>=23.2,<24",
    "boto3>=1.34,<1.35",
    "pydantic-settings>=2.2,<2.3",
]

[dependency-groups]
dev = [
    "httpx>=0.27,<0.29",
    "pytest>=8.2,<9",
    "pytest-asyncio>=0.23,<0.24",
]
